K3S/monitoring/AlertManager/discord.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-discord
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: alertmanager-discord
  replicas: 1
  template:
    metadata:
      labels:
        app: alertmanager-discord
    spec:
      containers:
        - name: alertmanager-discord
          image: benjojo/alertmanager-discord
          ports:
            - containerPort: 9094
