K3S/monitoring/AlertManager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alermanager-discord-svc
  namespace: monitoring
spec:
  selector:
    app: alertmanager-discord
  ports:
    - protocol: TCP
      port: 9099
      targetPort: 9094
  type: ClusterIP
